syntax = "proto3";

option csharp_namespace = "Stocks";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetStock (StockRequest) returns (ProductStockList);


}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message StockRequest {
    repeated int32 productId = 1;
}

message ProductStock {
    int32 productId = 1;
    int32 stock = 2;
}

message ProductStockList {
    repeated ProductStock products = 1;
}

service StockService {
}

